% Generated by roxygen2 (4.0.2): do not edit by hand
\name{changes}
\alias{changes}
\title{List changes to a database.}
\usage{
changes(cushion = "localhost", dbname, descending = NULL, startkey = NULL,
  endkey = NULL, since = NULL, limit = NULL, include_docs = NULL,
  feed = "normal", heartbeat = NULL, filter = NULL, ...)
}
\arguments{
\item{cushion}{A cushion name}

\item{dbname}{Database name. (charcter)}

\item{descending}{Return in descending order? (logical)}

\item{startkey}{Document ID to start at. (character)}

\item{endkey}{Document ID to end at. (character)}

\item{since}{Start the results from the change immediately after the given sequence number.}

\item{limit}{Number document IDs to return. (numeric)}

\item{include_docs}{If "true", returns docs themselves, in addition to IDs (character)}

\item{feed}{Select the type of feed. One of normal, longpoll, or continuous. See description. (character)}

\item{heartbeat}{Period in milliseconds after which an empty line is sent in the results.
Only applicable for longpoll or continuous feeds. Overrides any timeout to keep the
feed alive indefinitely. (numeric (milliseconds))}

\item{filter}{Reference a filter function from a design document to selectively get updates.}

\item{...}{Curl args passed on to \code{\link[httr]{GET}}}
}
\description{
Of course it doesn't make much sense to use certain options in
   _changes. For example, using feed=longpoll or continuous doesn't make much sense
   within R itself.
}
\examples{
\donttest{
changes(dbname="sofadb")
changes(dbname="sofadb", limit=2)

# different login credentials than normal, just pass in to function call
changes("cloudant", dbname='gaugesdb_ro')
changes("cloudant", dbname='gaugesdb_ro', include_docs='true')

# irishcouch
changes(cushion="iriscouch", dbname='helloworld')
changes(cushion="iriscouch", dbname='helloworld', include_docs='true')
}
}
