@@ -5,6 +5,7 @@
 #' @param dbname Database name
 #' @param delifexists If TRUE, delete any database of the same name before creating it.
 #'    This is useful for testing. Default is FALSE.
+#' @param as (character) One of list (default) or json
 #' @param ... Curl args passed on to \code{\link[httr]{GET}}
 #' @examples \donttest{
 #' createdb(dbname='leothelion')
@@ -17,13 +18,13 @@
 #' createdb("iriscouch", "beard")
 #' }
 
-createdb <- function(cushion="localhost", dbname, delifexists=FALSE, ...)
+createdb <- function(cushion="localhost", dbname, delifexists=FALSE, as='list', ...)
 {
   if(delifexists) deletedb(cushion, dbname, ...)
   cushion <- get_cushion(cushion)
   if(cushion$type=="localhost"){
-    sofa_PUT(sprintf("http://127.0.0.1:%s/%s", cushion$port, dbname), ...)
+    sofa_PUT(sprintf("http://127.0.0.1:%s/%s", cushion$port, dbname), as, ...)
   } else if(cushion$type %in% c("cloudant",'iriscouch')){
-    sofa_PUT(remote_url(cushion, dbname), content_type_json(), ...)
+    sofa_PUT(remote_url(cushion, dbname), as, content_type_json(), ...)
   }
 }
