@@ -3,6 +3,7 @@
 #' @export
 #' @param cushion A cushion name
 #' @param dbname Database name
+#' @param as (character) One of list (default) or json
 #' @param ... Curl args passed on to \code{\link[httr]{GET}}
 #' @examples \donttest{
 #' # local databasees
@@ -21,12 +22,12 @@
 #' deletedb('newdb', config=verbose())
 #' }
 
-deletedb <- function(cushion="localhost", dbname, ...)
+deletedb <- function(cushion="localhost", dbname, as='list', ...)
 {
   cushion <- get_cushion(cushion)
   if(cushion$type=="localhost"){
-    sofa_DELETE(sprintf("http://127.0.0.1:%s/%s", cushion$port, dbname), ...)
+    sofa_DELETE(sprintf("http://127.0.0.1:%s/%s", cushion$port, dbname), as, ...)
   } else if(cushion$type %in% c("cloudant",'iriscouch')){
-    sofa_DELETE(remote_url(cushion, dbname), content_type_json(), ...)
+    sofa_DELETE(remote_url(cushion, dbname), content_type_json(), as, ...)
   }
 }
