@@ -3,6 +3,7 @@
 #' @import httr
 #' @export
 #' @param cushion A cushion name
+#' @param as (character) One of list (default) or json
 #' @param ... Curl args passed on to \code{\link[httr]{GET}}
 #' @examples \donttest{
 #' ping()
@@ -10,8 +11,8 @@
 #' ping("iriscouch")
 #' }
 
-ping <- function(cushion="localhost", ...)
+ping <- function(cushion="localhost", as='list', ...)
 {
   cushion <- get_cushion(cushion)
-  sofa_GET(pick_url(cushion), args=NULL, ...)
+  sofa_GET(pick_url(cushion), args=NULL, as=as, ...)
 }
